# MakroScales

./: CMakeLists.txt  Icon.qrc  README.md  appcontroller.cpp  appcontroller.h  bridgelinxtocab.cpp  bridgelinxtocab.h  clientsocket.cpp  clientsocket.h  constants.cpp  constants.h  counterspage.cpp  counterspage.h  homepage.cpp  homepage.h  logspage.cpp  logspage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serversocket.cpp  serversocket.h  settingspage.cpp  settingspage.h
